#40: remove custom Gradle settings for JUnit 5
Signed-off-by: Christopher Zhong <1946052+ChristopherZhong@users.noreply.github.com>