@@ -70,42 +70,6 @@ bintray {
 }
 
 tasks {
-    named("compileJava", JavaCompile::class) {
-        inputs.property("moduleName", moduleName)
-        doFirst {
-            options.compilerArgs = listOf(
-                    "--module-path", classpath.asPath
-            )
-            classpath = files()
-        }
-    }
-    named("compileTestJava", JavaCompile::class) {
-        inputs.property("moduleName", moduleName)
-        doFirst {
-            options.compilerArgs = listOf(
-                    "--module-path", classpath.asPath,
-                    "--add-modules", junit,
-                    "--add-reads", "$moduleName=$junit",
-                    "--patch-module", "$moduleName=" + files(sourceSets["test"].java.srcDirs).asPath
-            )
-            classpath = files()
-        }
-    }
-    named("test", Test::class) {
-        useJUnitPlatform()
-        inputs.property("moduleName", moduleName)
-        doFirst {
-            jvmArgs = listOf(
-                    "--module-path", classpath.asPath,
-                    "--add-modules", "ALL-MODULE-PATH",
-                    "--add-reads", "$moduleName=$junit",
-                    "--add-reads", "$moduleName=org.assertj.core",
-                    "--add-opens", "$moduleName/$moduleName=org.junit.platform.commons",
-                    "--patch-module", "$moduleName=" + files(sourceSets["test"].java.outputDir).asPath
-            )
-            classpath = files()
-        }
-    }
     withType(JacocoReport::class) {
         reports {
             csv.isEnabled = false
